ui bug fix shifting contriner

--- a/webapp/src/index.css
+++ b/webapp/src/index.css
@@ -8,6 +8,7 @@
   html {
     font-family: 'Poppins', sans-serif;
     height: 100%;
+    overflow-y: scroll;
   }
   
   body {
@@ -15,6 +16,7 @@
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    padding-right: calc(100vw - 100%);
   }
 
   #root {
